# mul_agent

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  mint.json  mulagent.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test-compaction.ts  test-filter.ts  test-logger.ts  test-logger2.ts  test-s08.ts  test-s11.ts  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.transcripts/: transcript_1773797559136.jsonl  transcript_1773797596641.jsonl  transcript_1773797635986.jsonl  transcript_1774021087210.jsonl
docs/: ARCHITECTURE.md  ARCHITECTURE_REFACTOR_SUMMARY.md  ARCHITECTURE_UNIFICATION_COMPLETE.md  CODE_QUALITY_AND_DOCS.md  CODE_QUALITY_REPORT.md  DIR_STRUCT_DIFF_REPORT.md  E2E_TESTS.md  MEMORY_SYSTEM_IMPLEMENTATION.md  MIGRATION_REPORT.md  README.md  REFACTOR_PLAN.md  ROUTER_FIX_REPORT.md  TOOL_SYSTEM_GUIDE.md  getting-started.md  index.md  index.mdx  installation.md  installation.mdx  introduction.md  introduction.mdx  memory-design-final-v2.md  memory-design-final.md  memory-design-v2.md  memory-design-v3.md  memory-design.md  索引.md  需求.md  高级功能实施报告.md
docs/architecture/: modules.md
docs/assets/: README.md
docs/concepts/: agent.md  prompt.md  skills.md  tools.md
docs/project/: GOAL.md  VISION.md
docs/sessions/: README.md
docs/tasks/: detection-report.md  multi-agent-improvement.md
docs_development/20260325—Cron工具问题修复/: demand.md  review.md  solution.md  task.md
docs_development/20260325—History面板修复和AgentPrompt编辑/: demand.md  review.md  solution.md  task.md
docs_development/20260325—Workflow画板重设计/: demand.md  review.md  solution.md  task.md
git-hooks/: pre-commit
mul-agent-main/: .env.example  .mcp.json  CHANGELOG.md  CLEANUP_REPORT.md  CONTRIBUTING.md  README.md  SECURITY.md  oxfmt.config.json  oxlint.json  package-lock.json  package.json  pnpm-lock.yaml  test-agent.ts  tsconfig.json
scripts/: __init__.py  run_tests.py  setup-docs.sh  test-autonomous.ts  test-cron.ts  test-teammate.ts
storage/: config.json
tests/: test_session_manager.py
ui/: index.html  package-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+870 files in other folders)
