# mul-agent project configuration
# Note: Main codebase is TypeScript-based. Python used for memory embeddings and utility scripts.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mul-agent"
version = "2026.3.10"
description = "Multi-Agent Collaboration System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "mul-agent team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/mul-agent/mul-agent"
Documentation = "https://github.com/mul-agent/mul-agent/docs"
Repository = "https://github.com/mul-agent/mul-agent"

# Ruff configuration for Python scripts
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "scripts"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"

[tool.pytest.ini_options.markers]
slow = "marks tests as slow"
integration = "marks tests as integration tests"
e2e = "marks tests as end-to-end tests"
requires_llm = "marks tests that require LLM configuration"
requires_api = "marks tests that require running API server"
